<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.content.Context"/>

    <variable
      name="vm"
      type="com.lets.app.viewmodels.FiltersFragmentViewModel"/>

    <variable
      name="eventsVM"
      type="com.lets.app.viewmodels.EventsViewModel"/>

    <variable
      name="ctx"
      type="android.content.Context"/>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
          android:id="@+id/appBarLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:theme="@style/AppTheme.AppBarOverlay"
          app:elevation="0dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/Toolbar"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#565656">

            <Button
              android:id="@+id/resetFiltersButton"
              style="@style/Base.Widget.AppCompat.Button.Borderless"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="end"
              android:minLines="2"
              android:onClick="@{() -> vm.resetFilters(categorySpinner, sortingSpinner)}"
              android:text="RESET FILTERS"
              android:textColor="@color/primaryText"/>

          </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
          android:id="@+id/dateHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:layout_marginStart="16dp"
          android:text="Date"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

        <CheckBox
          android:id="@+id/dateSelectedCheckbox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:checked="@={!vm.dateSelected}"
          android:text="Any date"
          android:textColor="@color/primaryText"
          app:layout_constraintBottom_toTopOf="@id/dateHeader"
          app:layout_constraintStart_toEndOf="@id/dateHeader"
          app:layout_constraintTop_toBottomOf="@id/dateHeader"/>


        <EditText
          android:id="@+id/dateEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginStart="18dp"
          android:layout_marginEnd="32dp"
          android:enabled="true"
          android:focusable="false"
          android:inputType="date"
          android:visibility="@{vm.dateEditTextVisibility, default=gone}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/dateHeader"/>

        <TextView
          android:id="@+id/categoryHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:layout_marginStart="16dp"
          android:text="Category"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/dateEditText"/>

        <androidx.appcompat.widget.AppCompatSpinner
          android:id="@+id/categorySpinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/categoryHeader"/>

        <TextView
          android:id="@+id/sortingTypeHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:text="Sorting Type"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/categorySpinner"/>

        <androidx.appcompat.widget.AppCompatSpinner
          android:id="@+id/sortingSpinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/sortingTypeHeader"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
      android:id="@+id/applyFiltersButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="80dp"
      android:layout_marginEnd="80dp"
      android:background="@drawable/create_button"
      android:onClick="@{() -> vm.filterAndSortEventsBasedOnSelection(categorySpinner.getSelectedItemPosition(),sortingSpinner.getSelectedItemPosition(),eventsVM, ctx)}"
      android:text="APPLY FILTERS"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>