<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/homeButton"
    android:icon="@drawable/ic_home"
    android:title="Home"/>

  <item
    android:id="@+id/exploreButton"
    android:icon="@drawable/map_search"
    android:title="Explore"/>

  <item
    android:id="@+id/profileButton"
    android:icon="@drawable/ic_person"
    android:title="Profile"/>

  <item
    android:id="@+id/messagesButton"
    android:icon="@drawable/ic_message"
    android:title="Messages"/>


</menu>