...
      android:background="@android:color/white"
      app:elevation="0dp"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      app:titleTextColor="#565656">

      <ImageButton
        android:id="@+id/filtersButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:src="@drawable/filter_variant"
        android:tint="@color/primaryText"/>
...
