...
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/main_nav_menu"
      app:onNavigationItemSelectedListener="@{vm::onNavigationItemSelected}"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/menuBottomNav"
      app:layout_constraintEnd_toEndOf="parent"/>
...
