...
      android:background="@drawable/create_event_background_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/createdEventsHeader">

      <ImageView
        android:id="@+id/plusIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_add"
        app:layout_constraintBottom_toTopOf="@id/newEventText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
